kubernetes/03redis.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: redis-deployment
#   namespace: wanderlust
#   labels:
#     app: redis
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: redis
#   template:
#     metadata:
#       name: redis
#       labels:
#         app: redis
#     spec:
#       containers:
#         - name: redis
#           image: redis
#           ports:
#             - containerPort: 6379
#           volumeMounts:
#             - name: mongo-storage
#               mountPath: /var/lib/redis/dump.rdb
#       volumes:
#         - name: mongo-storage
#           persistentVolumeClaim:
#             claimName: mongo-pvc
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: redis-service
#   namespace: wanderlust
# spec:
#   selector:
#     app: redis
#   ports:
#     - port: 6379
#       targetPort: 6379
#       protocol: TCP



apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  namespace: wanderlust
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      name: redis
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
          volumeMounts:
            - name: redis-storage
              mountPath: /data
      volumes:
        - name: redis-storage
          persistentVolumeClaim:
            claimName: redis-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
  namespace: wanderlust
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
